converted some vh units to % cause they seem to have issues on mobile browsers

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -58,7 +58,7 @@ strike
 
 #HeaderSection
 {
-	min-height: 100vh;
+	min-height: 100%;
 	min-width: 100%;
 	background-image: url('../images/Example1_Finished.png');
 	background-size: cover;
