--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -24,7 +24,7 @@ body
 #mobilenavitems
 {
 	width: 100vw;
-	height: calc(100vh - 100px);
+	height: calc(100% - 100px);
 	background-color: lightgray;
 	position: fixed;
 	top: 100px;
@@ -36,7 +36,7 @@ body
 #mobilenavitems a
 {
 	display: block;
-	padding: calc(36vh/5);
+	padding: 14.1% 0;
 	text-align: center;
 	color: var(--siteDarkBlue);
 	font-family: product-sans-bold;
